commited web site pages
changed contentst

--- a/school.html
+++ b/school.html
@@ -5,6 +5,7 @@
     <body>
         <div class="studentname">
             <p>royal college colombo 7</p>
+            <p>the heaven</p>
         </div>
     </body>
 </html>
