--- a/student.html
+++ b/student.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="studentname">
-            <p>himesha</p>
+            <p>himesha kavinda</p>
         </div>
     </body>
 </html>
